# lxcat_data_parser

./: .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.py
hvl_lxcat_parser/: import_tools.py
lxcat/: .gitignore  AUTHORS.rst  __init__.py  import_tools.py  test.py  test_import_tools.py
lxcat_data_parser/: __init__.py  import_tools.py
tests/: test_import_tools.py
tests/test_data/: CO2_data.txt  CO2_data_copy.txt  CO2_data_different_order.txt  CO2_data_wrong_value.txt  N2_Phelps.txt  N2_Phelps_2.txt  N2_Phelps_copy.txt  N2_Phelps_different_order.txt  N2_Phelps_wrong_value.txt
