[build-system]
requires = ["setuptools >= 42.0",
    "setuptools_scm[toml] >= 6.2",
    "wheel"]
build-backend = "setuptools.build_meta"

       [project]
name = "lxcat-data-parser"
authors = [
    {name = "Alise Chachereau"}
    
]
description = "A set of tools developed at the High Voltage Lab (HVL) of ETH Zurich, for reading/writing electron scattering cross sections data, in a format compatible with the LXCat project."
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.0",
]
dynamic = ["version"]

[tool.setuptools_scm]

[project.optional-dependencies]
tests = [
    "pytest>=8.4.1",
]
